🚧  Add server-rendered templates and style
*Adds it from the other app

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,230 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+:root {
+  --main-theme-color: #1defaf;
+  --main-typeface-color: #333;
+  --light-typeface-color: #999;
+}
+
+body {
+  padding: 10px 40px;
+  color: var(--main-typeface-color);
+}
+
+nav {
+  height: 35px;
+  width: 90vw;
+  background: var(--main-theme-color);
+  display: grid;
+  grid-template-columns: 220px 3fr 1fr;
+  grid-template-rows: 35px;
+}
+
+nav a.logo {
+  margin-top: 5px;
+}
+
+footer {
+  height: 90px;
+  margin-top: 15px;
+  width: 90vw;
+  border-top: 5px solid var(--main-theme-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a,
+a:link,
+a:visited,
+a:active {
+  color: var(--main-typeface-color);
+  text-decoration: none;
+  user-select: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a.button-vote:hover {
+  text-decoration: none !important;
+  color: #999;
+}
+
+input:invalid {
+  border: 2px dashed red;
+}
+
+.nav-title {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-title__link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-items {
+  display: flex;
+  align-items: center;
+}
+
+.nav-login {
+  display: flex;
+  align-items: center;
+}
+
+ol.articles-list {
+  list-style: none;
+  counter-reset: listNumbering;
+}
+
+li.articles-list__article {
+  font-size: 12px;
+  counter-increment: listNumbering;
+  display: flex;
+  flex-direction: row;
+}
+
+li.articles-list__article:before {
+  content: counter(listNumbering);
+  color: var(--light-typeface-color);
+  font-size: 18px;
+  margin-right: 9px;
+}
+
+.article-link {
+  display: flex;
+  flex-direction: row;
+}
+
+.article-link__main {
+  font-size: 18px;
+  margin-left: 4px;
+}
+
+.article-link__meta,
+.article-link__meta a {
+  font-size: 12px;
+  color: var(--light-typeface-color);
+}
+
+.article-link__home {
+  color: var(--light-typeface-color);
+  font-size: 15px;
+  margin-left: 4px;
+  margin-top: 3px;
+  vertical-align: middle;
+}
+
+.nav-items ul {
+  list-style-type: none;
+  margin-left: -20px;
+}
+
+.nav-items ul li {
+  display: inline;
+}
+
+.nav-items ul li:not(:last-child)::after {
+  content: " | ";
+}
+
+.nav-title__icon {
+  background: url("https://cdn.brianbancroft.io/images/nullislanders/map_marker.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: 5px;
+
+  width: 18px;
+  height: 26px;
+}
+
+.nav-title__title {
+  margin-left: 5px;
+}
+
+.comments-list {
+  list-style-type: none;
+}
+.comments-list__article {
+  margin-bottom: 5px;
+}
+
+.comments-list__header {
+  margin-bottom: -10px;
+  margin-left: 24px;
+}
+
+.comments-list__header,
+.comments-list__header a {
+  color: var(--light-typeface-color);
+}
+
+.comment-textarea {
+  resize: none;
+  width: 500px;
+  height: 200px;
+}
+
+form.new-post {
+  margin-top: 10px;
+}
+
+form.new-post label {
+  display: block;
+  min-width: 80px;
+  margin-top: 5px;
+}
+form.new-post input {
+  width: 300px;
+}
+form.new-post input.submit {
+  width: 305px;
+  border-radius: 0px;
+  height: 30px;
+}
+
+section.warning {
+  width: 80%;
+  height: 50px;
+  margin: 10px auto 0 auto;
+  border: 1px solid #e00;
+  border-radius: 5px;
+
+  display: grid;
+  grid-template-columns: 35px 1fr;
+  grid-column-gap: 5px;
+  grid-template-rows: 1fr;
+}
+
+section.warning .warning-marker {
+  margin: auto;
+  border: 1px solid #e00;
+  border-radius: 100px;
+  width: 18px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 24px;
+  padding-left: 2px;
+}
+
+section.warning .warning-title {
+  text-align: center;
+  margin-top: 4px;
+  color: #444;
+  font-size: 22px;
+  letter-spacing: 5px;
+}
+
+section.warning .warning-message {
+  width: 95%;
+  margin: 0 auto;
+}
